--- a/ui/src/pages/Memos/List/ultra-compact.css
+++ b/ui/src/pages/Memos/List/ultra-compact.css
@@ -1,6 +1,8 @@
 .memos-list-page.list-layout-ultra-compact .memos-list {
     @apply flex flex-col gap-2 items-center max-w-none ps-8 relative;
 
+    @apply lg:grid lg:grid-cols-3 lg:items-start lg:justify-start;
+
     &::before {
         @apply w-0.5 bg-body-contrast absolute top-6 -bottom-10 left-2.5 rounded-lg dark:bg-primary-contrast/40;
         display: block;
@@ -17,6 +19,7 @@
 
     .memos-list-day {
         @apply self-start bg-body-contrast/70 text-body mt-1;
+        @apply lg:-translate-x-0 lg:ml-0 lg:col-span-3;
 
         &::before {
             @apply size-3 bg-body-contrast dark:bg-primary-contrast absolute -left-6 -ml-[3px] top-2.5 rounded-full z-10;
@@ -27,10 +30,22 @@
 
     .memo {
         @apply max-w-6xl min-w-fit w-full;
+
+        &:nth-of-type(1), &:nth-of-type(2), &:nth-of-type(3) {
+            @apply lg:mt-1;
+        }
     }
 
-    .memo:has(.memo-header h1) .markdown {
+    .memo:has(.memo-header h1) .markdown * {
         display: none;
+    }
+
+    .memo:has(.memo-header h1) .markdown p:has(.tag-link) {
+        display: block;
+
+        a {
+            display: inline;
+        }
     }
 
     .link-preview {
